--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ logging.level.org.springframework.data=DEBUG
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 #Hibernate ddl auto (create, create-drop,validate, update)
 spring.jpa.hibernate.ddl-auto=update
 
@@ -27,3 +29,14 @@ spring.thymeleaf.cache=false
 #DEBUG LOG FOR HIBERNATE
 logging.level.org.hibernate.sql=DEBUG
 logging.level.org.hibernate.type=TRACE
+
+
+#schema.sql
+spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+
+
+spring.sql.init.mode=always
+#spring.jpa.hibernate.ddl-auto=none
+
+#data.sql // insert into users(username, password, enabled)values('user1','1234', true);
